Namespaced modules + renamed Component to Partial

--- a/view/frontend/layout/zermatt_examples_index_index.xml
+++ b/view/frontend/layout/zermatt_examples_index_index.xml
@@ -6,7 +6,7 @@
             <block name="zermatt_examples.welcome" template="Maddlen_ZermattExamples::welcome.phtml"/>
             <block name="zermatt_examples.translate" template="Maddlen_ZermattExamples::translate.phtml"/>
             <block name="zermatt_examples.price" template="Maddlen_ZermattExamples::price.phtml"/>
-            <block name="zermatt_examples.components" template="Maddlen_ZermattExamples::components.phtml"/>
+            <block name="zermatt_examples.partials" template="Maddlen_ZermattExamples::partials.phtml"/>
             <block name="zermatt_examples.form" template="Maddlen_ZermattExamples::form.phtml"/>
             <block name="zermatt_examples.knockout" template="Maddlen_ZermattExamples::knockout.phtml"/>
             <block name="zermatt_examples.bind" template="Maddlen_ZermattExamples::bind.phtml"/>
