--- a/view/frontend/templates/partials/child-partial.phtml
+++ b/view/frontend/templates/partials/child-partial.phtml
@@ -5,4 +5,4 @@
 <?php
 /** @var \Magento\Framework\View\Element\Template $block */
 ?>
-<div>Sub-component "<?= $block->getData('name') ?>"</div>
+<div>Child partial "<?= $block->getData('name') ?>"</div>
