--- a/view/frontend/templates/partials/partial.phtml
+++ b/view/frontend/templates/partials/partial.phtml
@@ -5,7 +5,7 @@
 <?php
 /** @var \Magento\Framework\View\Element\Template $block */
 ?>
-<h4>Component "<?= $block->getData('name') ?>"</h4>
+<h4>Partial "<?= $block->getData('name') ?>"</h4>
 <?php if ($subPrefix = $block->getData('sub_prefix')): ?>
-    <?php zermatt_component("Maddlen_ZermattExamples::components/{$subPrefix}-component.phtml", ['name' => $block->getData('name')]) ?>
+    <?php zermatt_partial("Maddlen_ZermattExamples::partials/{$subPrefix}-partial.phtml", ['name' => $block->getData('name')]) ?>
 <?php endif; ?>
