--- a/view/frontend/templates/welcome.phtml
+++ b/view/frontend/templates/welcome.phtml
@@ -7,5 +7,5 @@
 ?>
 <?php $customerName = 'John Doe' ?>
 <h2>Welcome</h2>
-<div x-data="Zermatt.Module('welcome', {customerName: '<?= $customerName ?>'})" x-text="greet()"></div>
+<div x-data="Zermatt.Module('ZermattExamples_Welcome', {customerName: '<?= $customerName ?>'})" x-text="greet()"></div>
 
