--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -12,17 +12,17 @@ $nameField = 'name';
 $emailField = 'email';
 ?>
 <h2>Form</h2>
-<div x-data="Zermatt.Module('form', {formData: {<?= $nameField ?>: '', <?= $emailField ?>: ''}})" x-cloak>
+<div x-data="Zermatt.Module('Zermatt_Form', {formData: {<?= $nameField ?>: '', <?= $emailField ?>: ''}})" x-cloak>
     <form action="<?= $block->getUrl('zermatt_examples/form') ?>">
         <template x-if="form">
             <div>
-                <?php zermatt_component('Maddlen_ZermattExamples::components/form/text.phtml', ['label' => __('Name'), 'id' => 'random_id', 'name' => $nameField]) ?>
-                <?php zermatt_component('Maddlen_ZermattExamples::components/form/error.phtml', ['target' => $nameField]) ?>
+                <?php zermatt_partial('Maddlen_ZermattExamples::partials/form/text.phtml', ['label' => __('Name'), 'id' => 'random_id', 'name' => $nameField]) ?>
+                <?php zermatt_partial('Maddlen_ZermattExamples::partials/form/error.phtml', ['target' => $nameField]) ?>
 
-                <?php zermatt_component('Maddlen_ZermattExamples::components/form/text.phtml', ['label' => __('Email'), 'id' => 'another_random_id', 'name' => $emailField]) ?>
-                <?php zermatt_component('Maddlen_ZermattExamples::components/form/error.phtml', ['target' => $emailField]) ?>
+                <?php zermatt_partial('Maddlen_ZermattExamples::partials/form/text.phtml', ['label' => __('Email'), 'id' => 'another_random_id', 'name' => $emailField]) ?>
+                <?php zermatt_partial('Maddlen_ZermattExamples::partials/form/error.phtml', ['target' => $emailField]) ?>
 
-                <?php zermatt_component('Maddlen_ZermattExamples::components/form/button.phtml', ['label' => __('Submit')]) ?>
+                <?php zermatt_partial('Maddlen_ZermattExamples::partials/form/button.phtml', ['label' => __('Submit')]) ?>
             </div>
         </template>
     </form>
