--- a/view/frontend/templates/partials/form/button.phtml
+++ b/view/frontend/templates/partials/form/button.phtml
@@ -5,4 +5,4 @@
 <?php
 /** @var \Magento\Framework\View\Element\Template $block */
 ?>
-<button @click.prevent="submit" :disabled="form.processing"><?= $block->getData('label') ?></button>
+<button @click.prevent="submit" :disabled="form.processing"><?= $block->getLabel() ?></button>
