--- a/view/frontend/templates/price.phtml
+++ b/view/frontend/templates/price.phtml
@@ -21,7 +21,8 @@
         <span x-text="formatPrice(price)"></span>
     </div>
     <div>Final price is:
-        ƒ<span x-text="formatPrice(finalPrice)"></span></div>
+        <span x-text="formatPrice(finalPrice)"></span>
+    </div>
     <div>Final price as Euros:
         <span x-text="formatPrice(finalPrice, {currency: 'EUR'})"></span>
     </div>
