--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -15,6 +15,10 @@ $buttonTemplate = 'Maddlen_ZermattExamples::partials/form/button.phtml';
 ?>
 <h2>Form</h2>
 <div x-data="Zermatt.Module('Zermatt_Form', {formData: {<?= $nameField ?>: '', <?= $emailField ?>: ''}})" x-cloak>
+
+    <div x-text="validating ? 'Validating...' : 'Validation idle'"></div>
+    <div x-text="submitting ? 'Submitting...' : 'Submission idle'"></div>
+
     <form action="<?= $block->getUrl('zermatt_examples/form') ?>">
         <template x-if="form">
             <div>
